# onnx2keras

./: .gitignore  LICENSE  MLproject  Makefile  README.md  conda.yaml  generateKeras.py  pyproject.toml  requirements.txt  setup.py  support_map.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
onnx2keras/: __init__.py  activation_layers.py  constant_layers.py  converter.py  convolution_layers.py  elementwise_layers.py  layers.py  linear_layers.py  main.py  normalization_layers.py  operation_layers.py  padding_layers.py  pooling_layers.py  reshape_layers.py  upsampling_layers.py  utils.py
onnx2kerastl/: __init__.py  activation_layers.py  caffe2_layers.py  constant_layers.py  converter.py  convolution_layers.py  elementwise_layers.py  exceptions.py  fft_layers.py  layers.py  linear_layers.py  ltsm_layers.py  main.py  normalization_layers.py  operation_layers.py  padding_layers.py  pooling_layers.py  reshape_layers.py  sampling_layers.py  upsampling_layers.py  utils.py
onnx2kerastl/customonnxlayer/: __init__.py  onnxabs.py  onnxerf.py  onnxhardsigmoid.py  onnxlstm.py  onnxreducemean.py  onnxsqrt.py
test/: README.md  requirements.txt  utils.py
test/layers/activations/: activations.py  elu.py  hard_tanh.py  leaky_relu.py  log_sigmoid.py  log_softmax.py  prelu.py  relu.py  relu6.py  selu.py  sigmoid.py  softmax.py  tanh.py  test_elu.py  test_hard_sigmoid.py  test_hard_tanh.py  test_leaky_relu.py  test_log_sigmoid.py  test_log_softmax.py  test_prelu.py  test_relu.py  test_relu6.py  test_selu.py  test_sigmoid.py  test_softmax.py  test_tanh.py  test_threshold.py  threshold.py
test/layers/constants/: constant.py  test_constant.py
test/layers/convolutions/: conv2d.py  conv3d.py  convtranspose2d.py  test_conv2d.py  test_conv3d.py  test_convtranspose2d.py
test/layers/elementwise/: add.py  div.py  mul.py  sub.py  test_add.py  test_bitshift.py  test_div.py  test_mod.py  test_mul.py  test_round.py  test_sub.py
test/layers/linears/: linear.py  test_linear.py
test/layers/normalizations/: bn2d.py  in2d.py  test_bn2d.py  test_in2d.py
test/layers/operations/: cast.py  clip.py  floor.py  norm.py  operations.py  test_abs.py  test_bitwise_not.py  test_cast.py  test_clip.py  test_cumsum.py  test_floor.py  test_if.py  test_nms.py  test_norm.py  test_reduce.py  test_size.py  test_tan.py
test/models/: densenet.py  resnet18.py  test_albert_huggingface.py  test_albert_qa_huggingface.py  test_alexnet.py  test_bert_huggingface.py  test_bert_huggingface_classification.py  test_convnext.py  test_deeplab.py  test_densenet.py  test_efficientnet.py  test_glpn.py  test_googlenet.py  test_inception.py  test_mbnet2.py  test_mnasnet.py  test_mobilenetv3.py  test_mobilnet_cityscapes.py  test_raft_ci.py  test_regnet.py  test_resnet.py  test_resnet18.py  test_resnet18_training_mode.py  test_resnext.py  test_shufflenet.py  test_squeezenet.py  test_vgg.py  test_vit.py  test_vit_huggingface.py  test_x3d.py
test/models/fnet/: fnet2d.py  (+2 more)
(+28 files in other folders)
