[tool.poetry]
name = "onnx2kerastl"
version = "0.0.42"
description = ""
authors = ["dorhar <doron.harnoy@tensorleap.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
tensorflow = {version = "2.8.0", markers = "platform_machine  == 'x86_64'"}
tensorflow-macos = {version = "2.8.0", markers = "platform_machine  == 'arm64'"}
onnx = "^1.11.0"
keras-data-format-converter = "0.0.15"
tensorflow-addons = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
torch = {version = "^1.11.0", markers = "platform_machine  == 'x86_64'"}
torchvision = {version = "^0.12.0", markers = "platform_machine  == 'x86_64'"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
