[tool.poetry]
name = "onnx2kerastl"
version = "0.0.57"
description = ""
authors = ["dorhar <doron.harnoy@tensorleap.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
tensorflow = {version = "2.8.0", markers = "platform_machine  == 'x86_64'"}
tensorflow-macos = {version = "2.8.0", markers = "platform_machine  == 'arm64'"}
onnx = "1.10.1"
protobuf = "3.20.1"
keras-data-format-converter = "0.1.2"
tensorflow-addons = {version = "^0.17.1", markers = "platform_machine  == 'x86_64'"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
torch = {version = "^1.11.0", markers = "platform_machine  == 'x86_64'"}
torchvision = {version = "^0.12.0", markers = "platform_machine  == 'x86_64'"}
transformers = {extras = ["onnx"], version = "^4.20.1", markers = "platform_machine  == 'x86_64'"}
sentencepiece ={version = "^0.1.96", markers = "platform_machine  == 'x86_64'"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
